--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@ layout: default
 
 <!-- Post Header -->
 {% include intro-header.html type='post' %}
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 
 <!-- Post Content -->
 <article>
