--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 
+    src="//music.163.com/outchain/player?type=0&id=926483109&auto=0&height=430">
+</iframe>
 
 <!-- Post Content -->
 <article>
