--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,9 +30,11 @@ layout: default
                 
                 <!-- Netease Music -->
                 {% if page.music-id %}
-                    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 
-                        src="//music.163.com/outchain/player?type=2&id={{ page.music-id }}&auto=1&height=66">
-                    </iframe>
+                    <div id="iframe-container">
+                        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 
+                            src="//music.163.com/outchain/player?type=2&id={{ page.music-id }}&auto=1&height=66">
+                        </iframe>
+                    </div>
                 {% endif %}
 
 				{{ content }}
